--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "flatpickr": "^4.6.13",
     "jquery": "^3.7.1",
     "react": "^19.1.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
@@ -24,6 +25,7 @@
     "remixicon": "^4.6.0",
     "slick": "^1.12.2",
     "slick-carousel": "^1.8.1",
+    "sortablejs": "^1.15.6",
     "tailwind": "^2.3.1"
   },
   "devDependencies": {
