--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fontsource/poppins": "^5.2.6",
     "@fontsource/roboto": "^5.2.6",
+    "@mui/material": "^7.2.0",
     "@tailwindcss/vite": "^4.1.11",
     "bootstrap": "^5.3.7",
     "flatpickr": "^4.6.13",
     "jquery": "^3.7.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-easy-crop": "^5.4.2",
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.6.2",
