--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@mui/material": "^7.2.0",
     "@tailwindcss/vite": "^4.1.11",
     "bootstrap": "^5.3.7",
+    "d3": "^7.9.0",
     "flatpickr": "^4.6.13",
+    "html-to-image": "^1.11.13",
     "jquery": "^3.7.1",
+    "orgchart": "^5.0.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
