--- a/package.json
+++ b/package.json
@@ -9,21 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@balkangraph/orgchart.js": "^8.19.33",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fontsource/poppins": "^5.2.6",
     "@fontsource/roboto": "^5.2.6",
     "@mui/material": "^7.2.0",
-    "@tailwindcss/vite": "^4.1.11",
     "bootstrap": "^5.3.7",
-    "d3": "^7.9.0",
     "flatpickr": "^4.6.13",
-    "html-to-image": "^1.11.13",
     "jquery": "^3.7.1",
     "orgchart": "^5.0.0",
     "react": "^19.1.0",
-    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-easy-crop": "^5.4.2",
     "react-icons": "^5.5.0",
@@ -33,8 +28,7 @@
     "remixicon": "^4.6.0",
     "slick": "^1.12.2",
     "slick-carousel": "^1.8.1",
-    "sortablejs": "^1.15.6",
-    "tailwind": "^2.3.1"
+    "sortablejs": "^1.15.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -47,7 +41,6 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
     "vite": "^6.3.5"
   }
 }
